Sources/NeonFieldOps/include/NeonFieldOps.h

// ============================================================
// BLS12-381 Fr (scalar field, 4-limb)
// ============================================================

void bls12_381_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_381_fr_sqr(const uint64_t a[4], uint64_t r[4]);
void bls12_381_fr_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_381_fr_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_381_fr_neg(const uint64_t a[4], uint64_t r[4]);
// ============================================================
// BLS12-381 Fp (base field, 6-limb)
// ============================================================

void bls12_381_fp_mul(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_381_fp_sqr(const uint64_t a[6], uint64_t r[6]);
void bls12_381_fp_add(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_381_fp_sub(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_381_fp_neg(const uint64_t a[6], uint64_t r[6]);
void bls12_381_fp_inv_ext(const uint64_t a[6], uint64_t r[6]);
int  bls12_381_fp_sqrt(const uint64_t a[6], uint64_t r[6]);
// ============================================================
// BLS12-381 G1 curve ops (Jacobian projective, 6-limb coords)
// ============================================================

void bls12_381_g1_point_add(const uint64_t p[18], const uint64_t q[18], uint64_t r[18]);
void bls12_381_g1_point_double(const uint64_t p[18], uint64_t r[18]);
void bls12_381_g1_point_add_mixed(const uint64_t p[18], const uint64_t q_aff[12], uint64_t r[18]);
void bls12_381_g1_scalar_mul(const uint64_t p[18], const uint64_t scalar[4], uint64_t r[18]);
void bls12_381_g1_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                                 int n, uint64_t *result);
// ============================================================
// BLS12-381 Fp2 tower (Fp[u]/(u²+1), 12 uint64_t per element)
// ============================================================

void bls12_381_fp2_add(const uint64_t a[12], const uint64_t b[12], uint64_t r[12]);
void bls12_381_fp2_sub(const uint64_t a[12], const uint64_t b[12], uint64_t r[12]);
void bls12_381_fp2_neg(const uint64_t a[12], uint64_t r[12]);
void bls12_381_fp2_mul(const uint64_t a[12], const uint64_t b[12], uint64_t r[12]);
void bls12_381_fp2_sqr(const uint64_t a[12], uint64_t r[12]);
void bls12_381_fp2_conj(const uint64_t a[12], uint64_t r[12]);
void bls12_381_fp2_mul_by_nonresidue(const uint64_t a[12], uint64_t r[12]);
// ============================================================
// BLS12-381 G2 curve ops (Fp2 coords, 36 uint64_t projective)
// ============================================================

void bls12_381_g2_point_add(const uint64_t p[36], const uint64_t q[36], uint64_t r[36]);
void bls12_381_g2_point_double(const uint64_t p[36], uint64_t r[36]);
void bls12_381_g2_point_add_mixed(const uint64_t p[36], const uint64_t q_aff[24], uint64_t r[36]);
void bls12_381_g2_scalar_mul(const uint64_t p[36], const uint64_t scalar[4], uint64_t r[36]);
void bls12_381_g2_scalar_mul_wide(const uint64_t p[36], const uint64_t *scalar, int n_limbs, uint64_t r[36]);
// ============================================================
// BLS12-381 Fp2 inverse + higher tower + pairing
// ============================================================

void bls12_381_fp2_inv(const uint64_t a[12], uint64_t r[12]);
void bls12_381_fp6_mul(const uint64_t a[36], const uint64_t b[36], uint64_t r[36]);
void bls12_381_fp6_sqr(const uint64_t a[36], uint64_t r[36]);
void bls12_381_fp12_mul(const uint64_t a[72], const uint64_t b[72], uint64_t r[72]);
void bls12_381_fp12_sqr(const uint64_t a[72], uint64_t r[72]);
void bls12_381_fp12_inv(const uint64_t a[72], uint64_t r[72]);
void bls12_381_fp12_conj(const uint64_t a[72], uint64_t r[72]);
void bls12_381_miller_loop(const uint64_t p_aff[12], const uint64_t q_aff[24], uint64_t result[72]);
void bls12_381_final_exp(const uint64_t f[72], uint64_t result[72]);
void bls12_381_pairing(const uint64_t p_aff[12], const uint64_t q_aff[24], uint64_t result[72]);
int bls12_381_pairing_check(const uint64_t *pairs, int n);
// ============================================================
// BLS12-381 hash-to-curve G2 (RFC 9380, SSWU + 3-isogeny)
// ============================================================

void bls12_381_hash_to_g2(const uint8_t *msg, size_t msg_len,
                           const uint8_t *dst, size_t dst_len,
                           uint64_t result[36]);
void bls12_381_hash_to_g2_default(const uint8_t *msg, size_t msg_len, uint64_t result[36]);
void bls12_381_g2_clear_cofactor(const uint64_t p[36], uint64_t r[36]);
// ============================================================
// Jubjub twisted Edwards curve (over BLS12-381 Fr)
// ============================================================

void jubjub_point_add(const uint64_t p[16], const uint64_t q[16], uint64_t r[16]);
void jubjub_point_double(const uint64_t p[16], uint64_t r[16]);
void jubjub_scalar_mul(const uint64_t p[16], const uint64_t scalar[4], uint64_t r[16]);
// ============================================================
// BLS12-377 Fq (base field, 377-bit, 6x64-bit limbs)
// ============================================================

void bls12_377_fq_mul(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_377_fq_sqr(const uint64_t a[6], uint64_t r[6]);
void bls12_377_fq_add(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_377_fq_sub(const uint64_t a[6], const uint64_t b[6], uint64_t r[6]);
void bls12_377_fq_neg(const uint64_t a[6], uint64_t r[6]);
void bls12_377_fq_inverse(const uint64_t a[6], uint64_t r[6]);
// ============================================================
// BLS12-377 Fr (scalar field, 253-bit, 4x64-bit limbs)
// ============================================================

void bls12_377_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_377_fr_sqr(const uint64_t a[4], uint64_t r[4]);
void bls12_377_fr_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_377_fr_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void bls12_377_fr_neg(const uint64_t a[4], uint64_t r[4]);
/// Forward NTT on BLS12-377 Fr field (Cooley-Tukey DIT).
/// @param data Array of n * 4 uint64_t values (n elements, 4 limbs each, little-endian Montgomery form).
/// @param logN Log2 of the transform size (1..47).
void bls12_377_fr_ntt(uint64_t *data, int logN);
/// Inverse NTT on BLS12-377 Fr field (Gentleman-Sande DIF + bit-reversal + 1/n scaling).
void bls12_377_fr_intt(uint64_t *data, int logN);
// ============================================================
// BLS12-377 G1 point ops (Jacobian projective, y²=x³+1)
// ============================================================

void bls12_377_g1_point_add(const uint64_t p[18], const uint64_t q[18], uint64_t r[18]);
void bls12_377_g1_point_double(const uint64_t p[18], uint64_t r[18]);
void bls12_377_g1_point_add_mixed(const uint64_t p[18], const uint64_t q_aff[12], uint64_t r[18]);
void bls12_377_g1_scalar_mul(const uint64_t p[18], const uint64_t scalar[6], uint64_t r[18]);
void bls12_377_g1_to_affine(const uint64_t p[18], uint64_t aff[12]);
void bls12_377_g1_pippenger_msm(const uint64_t *points, const uint32_t *scalars,
                                 int n, uint64_t *result);
// ============================================================
// Stark252 field (p = 2^251 + 17*2^192 + 1)
// ============================================================

void stark252_fp_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void stark252_fp_sqr(const uint64_t a[4], uint64_t r[4]);
void stark252_fp_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void stark252_fp_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
void stark252_fp_neg(const uint64_t a[4], uint64_t r[4]);
// Stark252 NTT (Cooley-Tukey DIT forward, Gentleman-Sande DIF inverse)
// data: array of n elements (n = 2^logN), each 4×64-bit limbs in Montgomery form
void stark252_ntt(uint64_t *data, int logN);
void stark252_intt(uint64_t *data, int logN);
// ============================================================
// Binary tower field arithmetic (GF(2) towers for Binius STARKs)
// Uses ARM64 PMULL carry-less multiply intrinsics
// ============================================================

/// Initialize GF(2^8) log/exp/inverse lookup tables. Call once before using bt_gf8_*.
void bt_gf8_init(void);
/// GF(2^8) multiply via log/exp table (AES polynomial x^8+x^4+x^3+x+1).
uint8_t bt_gf8_mul(uint8_t a, uint8_t b);
/// GF(2^8) square.
uint8_t bt_gf8_sqr(uint8_t a);
/// GF(2^8) inverse (0 maps to 0).
uint8_t bt_gf8_inv(uint8_t a);
/// GF(2^16) multiply using PMULL (irreducible x^16+x^5+x^3+x+1).
uint16_t bt_gf16_mul(uint16_t a, uint16_t b);
/// GF(2^16) square.
uint16_t bt_gf16_sqr(uint16_t a);
/// GF(2^32) multiply using PMULL (irreducible x^32+x^7+x^3+x^2+1).
uint32_t bt_gf32_mul(uint32_t a, uint32_t b);
/// GF(2^32) square.
uint32_t bt_gf32_sqr(uint32_t a);
/// GF(2^64) multiply using PMULL (irreducible x^64+x^4+x^3+x+1).
uint64_t bt_gf64_mul(uint64_t a, uint64_t b);
/// GF(2^64) square.
uint64_t bt_gf64_sqr(uint64_t a);
/// GF(2^64) inverse via Itoh-Tsujii (0 maps to 0).
uint64_t bt_gf64_inv(uint64_t a);
/// GF(2^128) multiply (flat polynomial, AES-GCM irreducible x^128+x^7+x^2+x+1).
/// Elements are 2 x uint64_t: [lo, hi].
void bt_gf128_mul(const uint64_t a[2], const uint64_t b[2], uint64_t r[2]);
/// GF(2^128) square.
void bt_gf128_sqr(const uint64_t a[2], uint64_t r[2]);
/// GF(2^128) add (XOR).
void bt_gf128_add(const uint64_t a[2], const uint64_t b[2], uint64_t r[2]);
/// GF(2^128) inverse via Itoh-Tsujii.
void bt_gf128_inv(const uint64_t a[2], uint64_t r[2]);
/// Tower-form GF(2^128) = GF(2^64)[X]/(X^2+X+2): multiply.
/// Elements are [lo, hi] representing lo + hi*X.
void bt_tower128_mul(const uint64_t a[2], const uint64_t b[2], uint64_t r[2]);
/// Tower-form GF(2^128) square.
void bt_tower128_sqr(const uint64_t a[2], uint64_t r[2]);
/// Tower-form GF(2^128) add.
void bt_tower128_add(const uint64_t a[2], const uint64_t b[2], uint64_t r[2]);
/// Tower-form GF(2^128) inverse.
void bt_tower128_inv(const uint64_t a[2], uint64_t r[2]);
/// Batch GF(2^64) multiply: out[i] = a[i] * b[i].
void bt_gf64_batch_mul(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/// Batch GF(2^64) add (XOR): out[i] = a[i] ^ b[i], NEON-vectorized.
void bt_gf64_batch_add(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/// Batch GF(2^64) square: out[i] = a[i]^2.
void bt_gf64_batch_sqr(const uint64_t *a, uint64_t *out, int n);
/// Batch GF(2^128) multiply: out[i] = a[i] * b[i]. Each element is 2 x uint64_t.
void bt_gf128_batch_mul(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/// Batch GF(2^128) add: out[i] = a[i] ^ b[i]. Each element is 2 x uint64_t.
void bt_gf128_batch_add(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);
/// Batch tower-form GF(2^128) multiply.
void bt_tower128_batch_mul(const uint64_t *a, const uint64_t *b, uint64_t *out, int n);