bindings/rust/zkmetal-sys/src/lib.rs


// =============================================================================
// BLS12-381 Fr (scalar field, 4 x u64)
// =============================================================================

extern "C" {
    pub fn bls12_381_fr_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fr_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_381_fr_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fr_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fr_neg(a: *const u64, r: *mut u64);
}

// =============================================================================
// BLS12-381 Fp (base field, 6 x u64)
// =============================================================================

extern "C" {
    pub fn bls12_381_fp_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp_neg(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp_inv_ext(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp_sqrt(a: *const u64, r: *mut u64) -> c_int;
}

// =============================================================================
// BLS12-381 Fp2 tower (12 x u64 per element)
// =============================================================================

extern "C" {
    pub fn bls12_381_fp2_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_neg(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_conj(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_mul_by_nonresidue(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp2_inv(a: *const u64, r: *mut u64);
}

// =============================================================================
// BLS12-381 higher tower (Fp6, Fp12)
// =============================================================================

extern "C" {
    pub fn bls12_381_fp6_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp6_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp12_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_381_fp12_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp12_inv(a: *const u64, r: *mut u64);
    pub fn bls12_381_fp12_conj(a: *const u64, r: *mut u64);
}

// =============================================================================
// BLS12-381 G1 curve ops (Jacobian projective, 18 x u64)
// =============================================================================

extern "C" {
    pub fn bls12_381_g1_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn bls12_381_g1_point_double(p: *const u64, r: *mut u64);
    pub fn bls12_381_g1_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn bls12_381_g1_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn bls12_381_g1_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
}

// =============================================================================
// BLS12-381 G2 curve ops (Fp2 coords, 36 x u64 projective)
// =============================================================================

extern "C" {
    pub fn bls12_381_g2_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn bls12_381_g2_point_double(p: *const u64, r: *mut u64);
    pub fn bls12_381_g2_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn bls12_381_g2_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn bls12_381_g2_scalar_mul_wide(p: *const u64, scalar: *const u64, n_limbs: c_int, r: *mut u64);
}

// =============================================================================
// BLS12-381 Pairing
// =============================================================================

extern "C" {
    pub fn bls12_381_miller_loop(p_aff: *const u64, q_aff: *const u64, result: *mut u64);
    pub fn bls12_381_final_exp(f: *const u64, result: *mut u64);
    pub fn bls12_381_pairing(p_aff: *const u64, q_aff: *const u64, result: *mut u64);
    pub fn bls12_381_pairing_check(pairs: *const u64, n: c_int) -> c_int;
}

// =============================================================================
// BLS12-381 hash-to-curve G2
// =============================================================================

extern "C" {
    pub fn bls12_381_hash_to_g2(msg: *const u8, msg_len: usize, dst: *const u8, dst_len: usize, result: *mut u64);
    pub fn bls12_381_hash_to_g2_default(msg: *const u8, msg_len: usize, result: *mut u64);
    pub fn bls12_381_g2_clear_cofactor(p: *const u64, r: *mut u64);
}

// =============================================================================
// Jubjub twisted Edwards curve (over BLS12-381 Fr)
// =============================================================================

extern "C" {
    pub fn jubjub_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn jubjub_point_double(p: *const u64, r: *mut u64);
    pub fn jubjub_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
}

// =============================================================================
// BLS12-377 Fq (base field, 6 x u64)
// =============================================================================

extern "C" {
    pub fn bls12_377_fq_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fq_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_377_fq_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fq_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fq_neg(a: *const u64, r: *mut u64);
    pub fn bls12_377_fq_inverse(a: *const u64, r: *mut u64);
}

// =============================================================================
// BLS12-377 Fr (scalar field, 4 x u64)
// =============================================================================

extern "C" {
    pub fn bls12_377_fr_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fr_sqr(a: *const u64, r: *mut u64);
    pub fn bls12_377_fr_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fr_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bls12_377_fr_neg(a: *const u64, r: *mut u64);
    pub fn bls12_377_fr_ntt(data: *mut u64, logN: c_int);
    pub fn bls12_377_fr_intt(data: *mut u64, logN: c_int);
}

// =============================================================================
// BLS12-377 G1 curve ops
// =============================================================================

extern "C" {
    pub fn bls12_377_g1_point_add(p: *const u64, q: *const u64, r: *mut u64);
    pub fn bls12_377_g1_point_double(p: *const u64, r: *mut u64);
    pub fn bls12_377_g1_point_add_mixed(p: *const u64, q_aff: *const u64, r: *mut u64);
    pub fn bls12_377_g1_scalar_mul(p: *const u64, scalar: *const u64, r: *mut u64);
    pub fn bls12_377_g1_to_affine(p: *const u64, aff: *mut u64);
    pub fn bls12_377_g1_pippenger_msm(points: *const u64, scalars: *const u32, n: c_int, result: *mut u64);
}

// =============================================================================
// Stark252 field (p = 2^251 + 17*2^192 + 1, 4 x u64)
// =============================================================================

extern "C" {
    pub fn stark252_fp_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn stark252_fp_sqr(a: *const u64, r: *mut u64);
    pub fn stark252_fp_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn stark252_fp_sub(a: *const u64, b: *const u64, r: *mut u64);
    pub fn stark252_fp_neg(a: *const u64, r: *mut u64);
    pub fn stark252_ntt(data: *mut u64, logN: c_int);
    pub fn stark252_intt(data: *mut u64, logN: c_int);
}

// =============================================================================
// Binary tower field arithmetic (GF(2) towers for Binius STARKs)
// =============================================================================

extern "C" {
    pub fn bt_gf8_init();
    pub fn bt_gf8_mul(a: u8, b: u8) -> u8;
    pub fn bt_gf8_sqr(a: u8) -> u8;
    pub fn bt_gf8_inv(a: u8) -> u8;
    pub fn bt_gf16_mul(a: u16, b: u16) -> u16;
    pub fn bt_gf16_sqr(a: u16) -> u16;
    pub fn bt_gf32_mul(a: u32, b: u32) -> u32;
    pub fn bt_gf32_sqr(a: u32) -> u32;
    pub fn bt_gf64_mul(a: u64, b: u64) -> u64;
    pub fn bt_gf64_sqr(a: u64) -> u64;
    pub fn bt_gf64_inv(a: u64) -> u64;
    pub fn bt_gf128_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bt_gf128_sqr(a: *const u64, r: *mut u64);
    pub fn bt_gf128_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bt_gf128_inv(a: *const u64, r: *mut u64);
    pub fn bt_tower128_mul(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bt_tower128_sqr(a: *const u64, r: *mut u64);
    pub fn bt_tower128_add(a: *const u64, b: *const u64, r: *mut u64);
    pub fn bt_tower128_inv(a: *const u64, r: *mut u64);
    pub fn bt_gf64_batch_mul(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn bt_gf64_batch_add(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn bt_gf64_batch_sqr(a: *const u64, out: *mut u64, n: c_int);
    pub fn bt_gf128_batch_mul(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn bt_gf128_batch_add(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
    pub fn bt_tower128_batch_mul(a: *const u64, b: *const u64, out: *mut u64, n: c_int);
}
